Update YCSB test

--- a/db/Makefile
+++ b/db/Makefile
@@ -1,9 +1,10 @@
 CC=g++
 CYGNUS=y
-CFLAGS=-std=c++11 -c -g -Wall -fgnu-tm
+CFLAGS= -c -g -O3 -Wall -fgnu-tm
 INCLUDES=-I../
 SOURCES=$(wildcard *.cc)
 OBJECTS=$(SOURCES:.cc=.o)
+
 ifeq ($(CYGNUS),y)
 RUNTIME_DIR	= /home/yihan/cygnus/Cygnus
 CFLAGS	+= -DCYGNUS -I$(RUNTIME_DIR)/include/ $(shell pkg-config --cflags libdpdk)
